tests/baselines/reference/ES5For-ofTypeCheck10.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck10.ts(14,15): error TS2569: Type 'StringIterator' is not an array type or a string type. Use compiler option '--downlevelIteration' to allow iterating of iterators.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck10.ts (1 errors) ====
    // In ES3/5, you cannot for...of over an arbitrary iterable.
    class StringIterator {
        next() {
            return {
                done: true,
                value: ""
            };
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2569: Type 'StringIterator' is not an array type or a string type. Use compiler option '--downlevelIteration' to allow iterating of iterators.